# DocTour.AI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
DocTour-AI/: Cargo.toml
DocTour-AI/api/: Cargo.toml
DocTour-AI/api/src/: lib.rs
DocTour-AI/benchmark_macro/src/: lib.rs
DocTour-AI/core/: Cargo.toml
DocTour-AI/core/src/: lib.rs
DocTour-AI/core/src/schemas/: mod.rs
DocTour-AI/macros/benchmark_macro/src/: lib.rs
DocTour-AI/macros/schema_macro/: Cargo.toml
DocTour-AI/schema_macro/: Cargo.toml
DocTour-AI/system/: Cargo.toml  configs.json
DocTour-AI/system/src/: benchmark.rs  config.rs  lib.rs  path.rs
DocTour-AI/system/src/env/: config.rs  db.rs  mod.rs
DocTour-AI/system/src/logger/: debug.rs  mod.rs
doctour_ai/: Cargo.toml
schema_macro/src/: lib.rs
system/: Cargo.toml  configs.json
