[package]
name = "doctour_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
surrealdb = { version = "1.3.1" }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.114" }
schema_macro = { version = "0.1.0", path = "../macros/schema_macro" }