[package]
name = "schema_macro"
version = "0.1.0"

# Indicates this is a procedural macro crate.
[lib]
proc-macro = true

[dependencies]
# Provides types and traits for working with Rust syntax trees.
syn = { version = "2.0.53", features = ["full"] }

# Used to generate Rust code from procedural macros.
quote = "1.0.35"

# Provides TokenStream API that procedural macros work with.
proc-macro2 = "1.0.79"

# Serde is optional here, depending on whether your macro
# logic needs to manipulate serialization-related attributes directly.
serde = { version = "1.0.197", optional = true, features = ["derive"] }

# Enable serde feature if needed by macro logic.
[features]
default = ["serde"]
